Heavy modifications - iptables && selinux should be reconfigured

--- a/roles/monitoring_httpd/templates/etc/httpd/conf.d/sensu.conf.j2
+++ b/roles/monitoring_httpd/templates/etc/httpd/conf.d/sensu.conf.j2
@@ -7,11 +7,11 @@
   #
   # Proxy
   #
-{% if sensu_httpd_ssl | bool %}
-  SSLEngine on
-  SSLCertificateFile {{ monitoring_cert }}
-  SSLCertificateKeyFile {{ monitoring_key }}
-{% endif %}
+#{% if sensu_httpd_ssl | bool %}
+#  SSLEngine on
+#  SSLCertificateFile {{ monitoring_cert }}
+#  SSLCertificateKeyFile {{ monitoring_key }}
+#{% endif %}
 
   <Proxy *>
     Order deny,allow
