--- a/roles/monitoring_httpd/templates/etc/httpd/conf.d/kibana.conf.j2
+++ b/roles/monitoring_httpd/templates/etc/httpd/conf.d/kibana.conf.j2
@@ -5,11 +5,11 @@
   # Proxy
   #
 
-{% if kibana_httpd_ssl | bool %}
-  SSLEngine on
-  SSLCertificateFile {{ monitoring_cert }}
-  SSLCertificateKeyFile {{ monitoring_key }}
-{% endif %}
+#{% if kibana_httpd_ssl | bool %}
+#  SSLEngine on
+#  SSLCertificateFile {{ monitoring_cert }}
+#  SSLCertificateKeyFile {{ monitoring_key }}
+#{% endif %}
 
   <Proxy *>
     Order deny,allow
